# shiori

./: .env.example  .gitignore  AGENTS.md  CMakeLists.txt  DartConfiguration.tcl  HUMANS.md  LICENSE  README.md  assistantd  cmake_install.cmake  test_audio_capture_shape  test_config_shape  test_llm_adapter_shape  test_ring_buffer_shape  test_ring_buffer_spsc  test_supervisor_shape  test_vad_detector_shape
.github/workflows/: ci.yml
config/: assistantd.env  assistantd.env.example  system_prompt.txt
docs/: daemon-scaffold.md  jack_log.txt
include/assistantd/: audio_capture.h  config.h  llm_adapter.h  logger.h  playback.h  ring_buffer.h  shutdown.h  status.h  stt_adapter.h  supervisor.h  tts_adapter.h  vad_detector.h
include/assistantd/utilities/: artifact_queue.h  logger.h
scripts/: install_assistantd.sh  mac_stream_audio.sh
src/assistantd/: audio_capture.c  config.c  llm_adapter.c  logger.c  main.c  playback.c  ring_buffer.c  shutdown.c  status.c  stt_adapter.c  supervisor.c  tts_adapter.c  vad_detector.c
src/assistantd/utilities/: artifact_queue.c  logger.c
systemd/: assistantd.service
tests/c/: test_audio_capture_shape.c  test_config_shape.c  test_llm_adapter_shape.c  test_llm_response_queue_shape.c  test_playback_shape.c  test_ring_buffer_shape.c  test_ring_buffer_spsc.c  test_stt_adapter_shape.c  test_supervisor_shape.c  test_vad_detector_shape.c
